drone/drone-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-ops
  name: drone-runner
  labels:
    app.kubernetes.io/name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-runner
    spec:
      serviceAccountName: drone-pipeline
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: http
