drone/drone-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-ops
  name: drone-svr
  labels:
    app: drone
spec:
  selector:
    matchLabels:
      app: drone_svr
  replicas: 1
  template:
    metadata:
      namespace: kube-ops
      labels:
        app: drone_svr
    spec:
      serviceAccountName: drone
      hostAliases:
      - ip: "192.168.2.17"
        hostnames:
        - "gitlab.zw.com"
        - "drone.zw.com"
      - ip: "192.168.2.101"
        hostnames:
        - "gitlab.zw.com"
        - "drone.zw.com"
      containers:
      - name: server
        image: "drone/drone:1.6"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        # - name: https
        #   containerPort: 443
        #   protocol: TCP
        - name: grpc
          containerPort: 9000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http       
        volumeMounts:
        - name: data
          mountPath: /var/lib/drone
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc-drone
