drone/drone-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-ops
  name: drone-svr
  annotations:
  labels:
    app: drone_svr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: drone_svr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-svr
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: drone.zw.com
    http:
      paths:
      - backend:
          serviceName: drone-svr
          servicePort: http
